adição de conteúdo

--- a/Teste_background/index.html
+++ b/Teste_background/index.html
@@ -6,22 +6,17 @@
     <title>Teste de Background</title>
     <link rel="stylesheet" href="style.css">
 </head>
-    <style>
-        body{
-            background-image: url('imagens/wallpaper002.jpg');
-            background-color: black;
-            background-size: cover;
-            background-attachment:fixed;
-        }
-    </style>
+    
 <body>
     <main>
-        <h1>Teste de Texto</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore dolores ipsum soluta. Iste ullam odit doloribus optio et, praesentium culpa ad sapiente expedita laudantium, delectus a necessitatibus, odio vel Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem quaerat veritatis aperiam quia fugit aut numquam amet maxime perspiciatis doloribus earum, quod commodi, deserunt nihil reiciendis molestiae in soluta quasi!</p>
+        <h1>Texto de Texto</h1>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates saepe harum voluptatibus dicta ea explicabo aspernatur soluta veniam nam, quibusdam, magni a sapiente consectetur quidem, earum dolore accusamus ex qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum consectetur quis dicta culpa assumenda beatae ea repellendus suscipit at ipsa doloribus molestias vero tempora, blanditiis repudiandae quas cumque ducimus libero.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore dolores ipsum soluta. Iste ullam odit doloribus optio et, praesentium culpa ad sapiente expedita laudantium, delectus a necessitatibus, odio vel Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem quaerat veritatis aperiam quia fugit aut numquam amet maxime perspiciatis doloribus earum, quod commodi, deserunt nihil reiciendis molestiae in soluta quasi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque incidunt eos ullam rerum quidem unde perferendis placeat temporibus aliquam, veritatis blanditiis ratione rem. Praesentium suscipit delectus similique molestiae quidem hic.</p>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatem recusandae ab accusantium ipsum? Dolorem vel veritatis reiciendis id labore. Eos nulla quasi blanditiis dolorum officia iure commodi ullam modi! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, voluptates! Alias, fugit, nobis odit aut ducimus inventore qui quisquam veniam quaerat labore impedit! Tenetur assumenda obcaecati id harum saepe molestiae!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates saepe harum voluptatibus dicta ea explicabo aspernatur soluta veniam nam, quibusdam, magni a sapiente consectetur quidem, earum dolore accusamus ex qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum consectetur quis dicta culpa assumenda beatae ea repellendus suscipit at ipsa doloribus molestias vero tempora, blanditiis repudiandae quas cumque ducimus libero. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, aut provident ducimus totam, architecto voluptatibus nemo odit voluptate dolores placeat quasi aliquam aperiam dolore eaque cum? Dolore atque hic nulla.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptatem recusandae ab accusantium ipsum? Dolorem vel veritatis reiciendis id labore. Eos nulla quasi blanditiis dolorum officia iure commodi ullam modi! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, voluptates! Alias, fugit, nobis odit aut ducimus inventore qui quisquam veniam quaerat labore impedit! Tenetur assumenda obcaecati id harum saepe molestiae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, veniam? Nulla eum unde dolor et quasi, explicabo cum aliquam voluptates possimus voluptas animi facilis, doloribus eveniet, facere officiis dolore fuga.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur eveniet dolores reprehenderit blanditiis accusamus consectetur aperiam, expedita nostrum iusto tenetur alias quaerat recusandae aliquam facilis ducimus magni dolor culpa quos. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus optio expedita atque! Consequuntur, eaque iusto corporis accusantium aperiam eos aliquam libero pariatur deserunt, nostrum architecto delectus, labore optio non. Quae? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid odio impedit quam labore quidem sint eius consequuntur laboriosam nesciunt. Alias temporibus similique ipsum, eum fugiat dignissimos earum placeat sunt corporis!</p>
     </main>
 </body>
 </html>
