--- a/projeto_cordel/index.html
+++ b/projeto_cordel/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel animado</title>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
     <header>
         <h1>Cordel Moderno</h1>
@@ -106,6 +107,7 @@
             Seus lábios são aparelhos<br>
             Deixe que Deus interprete.<br>
         </section>
+        <p>&nbsp;</p>
     </main>
 <footer>Feito por <a href="https://github.com/Victor-jairon" target="_blank">Victor jairon</a>, aprendendo com <a href="https://github.com/professorguanabara" target="_blank">Gustavo Guanabara</a></footer>
 </body>
