--- a/desafio_tabelas/tabela2.html
+++ b/desafio_tabelas/tabela2.html
@@ -36,5 +36,7 @@
                 <td>15</td>
         </tr>
     </table>
+    <a href="tabela3.html">tabela3</a>
+    <a href = "index.html">tabela1</a>
 </body>
 </html>
