--- a/desafio_tabelas/index.html
+++ b/desafio_tabelas/index.html
@@ -31,7 +31,8 @@
         <tr>
             <td colspan="4">N</td>
         </tr>
-    </table> <a href="tabela2.html">tabela2</a>
-
+    </table>
+    <a href="tabela2.html">tabela2</a>
+    <a href="tabela3.html">tabela3</a>
 </body>
 </html>
