--- a/desafio_tabelas/tabela3.html
+++ b/desafio_tabelas/tabela3.html
@@ -57,5 +57,7 @@
     </table>
     <a href="index.html">tabela1</a>
     <a href="tabela2.html">tabela2</a>
+    <a href="#">tabela3</a>
+    <a href="tabela4.html">tabela4</a>
 </body>
 </html>
