--- a/desafio_tabelas/tabela2.html
+++ b/desafio_tabelas/tabela2.html
@@ -36,7 +36,9 @@
                 <td>15</td>
         </tr>
     </table>
-    <a href="tabela3.html">tabela3</a>
     <a href = "index.html">tabela1</a>
+    <a href = "#">tabela2</a>
+    <a href="tabela3.html">tabela3</a>
+    <a href="tabela4.html">tabela4</a>
 </body>
 </html>
