adição dos apps

--- a/projeto-media/index.html
+++ b/projeto-media/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +9,28 @@
 
 <body>
     <div id="container">
-        <iframe id="tela" frameborder='0' srcdoc="<style>body{background-image: url(pacote-d013/pacote-d013/imagens/tela-home.jpg);
+        <iframe name='tela' id="tela" frameborder='0' srcdoc="<style>body{background-image: url(pacote-d013/pacote-d013/imagens/tela-home.jpg);
             background-attachment: fixed;
             background-size: cover;}</style><body></body>"
          src="pacote-d013/pacote-d013/imagens/tela-home.jpg" alt="tela de um celular">
+
+
         </iframe>
         <img src="pacote-d013/pacote-d013/imagens/frame-iphone.png">
         <img>
     </div>
     <div id="control">
-        <div><img src="pacote-d013/pacote-d013/imagens/logo-youtube.jpg" alt="youtube" class="icon"></div>
+        <div><a href= 'paginas_cel/home.html' target="tela"><img src="pacote-d013/pacote-d013/imagens/logo-home.jpg" alt="youtube" class="icon"></a></div>
+
+        <div><a href="paginas_cel/youtube.html" target="tela"><img src="pacote-d013/pacote-d013/imagens/logo-youtube.jpg" alt="youtube" class="icon"></a></div>
+
+        <div><a href="paginas_cel/facebook.html" target="tela"><img src="pacote-d013/pacote-d013/imagens/logo-facebook.jpg" alt="youtube" class="icon"></a></div>
+
+        <div><a href="paginas_cel/github.html" target="tela"><img src="pacote-d013/pacote-d013/imagens/logo-github.jpg" alt="youtube" class="icon"></a></div>
+
+        <div><a href="paginas_cel/instagram.html" target="tela"><img src="pacote-d013/pacote-d013/imagens/logo-instagram.jpg" alt="youtube" class="icon"></a></div>
+
+        <div><a href="paginas_cel/twitter.html" target="tela"><img src="pacote-d013/pacote-d013/imagens/logo-twitter.jpg" alt="youtube" class="icon"></a></div>
     </div>
 </body>
 </html>
